# Closest_Pair_of_Points

./: CMakeLists.txt  Librerias.h  Point.h  README.md  Simulation.h  main.cpp
